--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -468,10 +468,129 @@
     <%= f.button(:next, value: "enemies", class: "slanted-button next", data: { turbo: false }) { t(".next") } %>
   </fieldset>
 
-<!--
   <fieldset id="enemies" class="lifepath_entry">
     <legend><%= t ".enemies", count: f.object.enemies.count %></legend>
+    
+    <% f.object.enemies.each_with_index do |enemy, i| %>
+      <%= f.fields_for :enemies, enemy do |enemy_fields| %>
+        <div class="field">
+          <%= enemy_fields.label :name, "Name", index: i %>
+          <%= enemy_fields.text_field :name, index: i, required: true %>
+        </div>
+        
+        <div class="field secondary" data-controller="options-table">
+          <%= enemy_fields.label :connection, "Connection", index: i %>
+          <%= enemy_fields.text_field :connection, index: i, required: true, data: { options_table_target: "field" } %>
+          <table>
+            <thead>
+              <tr>
+                <th><%= t ".roll" %></th>
+                <th><%= "Enemy" %></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% Enemy::CONNECTIONS.each_with_index do |o, i| %>
+                <%= tag.tr data: { options_table_target: "option", action: "click->options-table#pick" } do %>
+                  <%= tag.th i+1 %>
+                  <%= tag.td do %>
+                    <%= Enemy.human_attribute_name "connection.#{o}" %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2">
+                  <button type="button" class="slanted-button" data-action="options-table#pickAtRandom">
+                    <%= t ".random" %>
+                  </button>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+
+        <div class="field secondary" data-controller="options-table">
+          <%= enemy_fields.label :cause, "Cause", index: i %>
+          <%= enemy_fields.text_field :cause, index: i, required: true, data: { options_table_target: "field" } %>
+          <table>
+            <thead>
+              <tr>
+                <th><%= t ".roll" %></th>
+                <th><%= "What caused it?" %></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% Enemy::CAUSES.each_with_index do |o, i| %>
+                <%= tag.tr data: { options_table_target: "option", action: "click->options-table#pick" } do %>
+                  <%= tag.th i+1 %>
+                  <%= tag.td do %>
+                    <%= Enemy.human_attribute_name "cause.#{o}" %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2">
+                  <button type="button" class="slanted-button" data-action="options-table#pickAtRandom">
+                    <%= t ".random" %>
+                  </button>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+        
+        <div class="field secondary" data-controller="options-carousel">
+          <%= f.label :role %>
+          <button class="back" data-action="options-carousel#prev" type="button"></button>
+          <%= f.text_field :role, list: "wronged_party_#{i}", readonly: true, data: { options_carousel_target: "field" } %>
+          <button class="forward" data-action="options-carousel#next" type="button"></button>
+          <datalist id="wronged_party_<%= i %>">
+            <option>You</option>
+            <option>Them</option>
+          </datalist>
+        </div>
+        
+        <div class="field secondary" data-controller="options-table">
+          <%= enemy_fields.label :means_of_retaliation, "means_of_retaliation", index: i %>
+          <%= enemy_fields.text_field :means_of_retaliation, index: i, required: true, data: { options_table_target: "field" } %>
+          <table>
+            <thead>
+              <tr>
+                <th><%= t ".roll" %></th>
+                <th><%= "What means_of_retaliationd it?" %></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% Enemy::MEANS_OF_RETALIATION.each_with_index do |o, i| %>
+                <%= tag.tr data: { options_table_target: "option", action: "click->options-table#pick" } do %>
+                  <%= tag.th i+1 %>
+                  <%= tag.td do %>
+                    <%= Enemy.human_attribute_name "means_of_retaliation.#{o}" %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="2">
+                  <button type="button" class="slanted-button" data-action="options-table#pickAtRandom">
+                    <%= t ".random" %>
+                  </button>
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
+      <% end %>
+    <% end %>
+    
+    <%= f.button(:next, value: "wrap-up", class: "slanted-button next", data: { turbo: false }) { t(".next") } %>
   </fieldset>
+
+
   
   <fieldset id="wrap-up" class="lifepath_entry">
     <legend><%= t ".wrap_up" %></legend>
@@ -480,6 +599,4 @@
   <fieldset id="role-lifepath" class="lifepath_entry">
     <legend><%= t ".role_lifepath" %></legend>
   </fieldset>
--->
-
 <% end %>
